fix(button-text): change button text to 'Previous' - add custom css to adjust alignment - change text from 'Discard' to 'Previous' - change goBack function to work where Previous button is

--- a/src/_css/AddAssetComponent.scss
+++ b/src/_css/AddAssetComponent.scss
@@ -16,3 +16,7 @@
 .label-style {
   margin-top: 4%;
 }
+
+#previous-button {
+  width: 103px;
+}
